manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netstress
  labels:
    app: netstress
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: netstress
  template:
    metadata:
      labels:
        app: netstress
    spec:
      containers:
        - name: netstress
          image: ghcr.io/robo358/netstress-k8s
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
