manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netstress
  labels:
    app: netstress
spec:
  selector:
    app: netstress
  ports:
    - name: http
      port: 80
      targetPort: http
