manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netstress
spec:
  parentRefs:
    - name: netstress-gateway
  hostnames:
    - netstress.yh.k8s.tsuru.run
  rules:
    - backendRefs:
        - name: netstress
          port: 80
